<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/detail_toolbar_fragment"
        layout="@layout/view_detail_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing_horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_animal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/animal_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_vertical"
                android:text="@string/animal_detail_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_animal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_vertical"
                android:layout_marginTop="@dimen/spacing_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animal_detail_text">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/label_animal_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_animal_sex"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/sex_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toEndOf="@id/label_animal_sex"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Hembra" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/label_animal_date_born"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_vertical"
                        android:text="@string/label_animal_date_born"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_animal_sex" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/date_born_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_spacing_horizontal"
                        app:layout_constraintStart_toEndOf="@id/label_animal_date_born"
                        app:layout_constraintTop_toTopOf="@id/label_animal_date_born"
                        tools:text="01-01-2021" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/label_animal_breed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_vertical"
                        android:text="@string/label_animal_breed"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_animal_date_born" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/breed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_spacing_horizontal"
                        app:layout_constraintStart_toEndOf="@id/label_animal_breed"
                        app:layout_constraintTop_toTopOf="@id/label_animal_breed"
                        tools:text="Mestiza" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/label_animal_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_vertical"
                        android:text="@string/label_animal_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_animal_breed" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/size_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_spacing_horizontal"
                        app:layout_constraintStart_toEndOf="@id/label_animal_size"
                        app:layout_constraintTop_toTopOf="@id/label_animal_size"
                        tools:text="Medio" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/descripion_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_animal_size"
                        tools:text="Descripcion Descripcion Descripcion Descripcion Descripcion Descripcion " />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>